# fruit_shop_bot

./: README.md  config.py  main.py  pyproject.toml
src/db/: clear_db.py  create_db.py  db_manager.py
src/handlers/: admin.py  cart.py  catalog.py  order.py  start.py
src/keyboards/: admin_panel.py  cart.py  categories.py  main_menu.py  order.py  products.py
src/models/: products.py
src/services/: cart.py
src/states/: cart.py  order.py  product.py
src/utils/: cart_preview.py  state.py
